# forge-3d-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run.ps1
assets/shaders/: blinnphong.frag  bloom_threshold.frag  blur.frag  env_irradiance.comp  env_prefilter.comp  flat.frag  flat.vert  fullscreen.vert  grid.frag  grid.vert  pathtrace.comp  pbr.frag  pbr.vert  shadow.frag  shadow.vert  skydome.frag  skydome.vert  tonemap.frag
cmake/: Dependencies.cmake
docs/: PLAN-M8-MODELING.md  PLAN.md
editor/: CMakeLists.txt
editor/src/: CommandStack.h  EditTool.cpp  EditTool.h  EditorApp.cpp  EditorApp.h  EditorCamera.cpp  EditorCamera.h  FileDialog.cpp  FileDialog.h  SculptTool.cpp  SculptTool.h  Theme.h  main.cpp
engine/: CMakeLists.txt
engine/src/forge/assets/: AssetManager.h  MeshFactory.cpp  MeshFactory.h  ModelImporter.cpp  ModelImporter.h  SceneFormat.cpp  SceneFormat.h  SceneSerializer.cpp  SceneSerializer.h
engine/src/forge/core/: Geometry.h  Log.h  Math.h  UUID.h
engine/src/forge/geometry/: EditMesh.cpp  EditMesh.h  MeshEdit.cpp  MeshEdit.h
engine/src/forge/platform/: Window.cpp  Window.h
engine/src/forge/raytrace/: BVH.cpp  BVH.h  PathTracer.cpp  PathTracer.h
engine/src/forge/renderer/: Environment.cpp  Environment.h  Framebuffer.cpp  Framebuffer.h  Material.h  Mesh.cpp  Mesh.h  PostProcess.cpp  PostProcess.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
engine/src/forge/scene/: BoxSelect.cpp  BoxSelect.h  Components.h  Scene.cpp  Scene.h  TransformSnap.cpp  TransformSnap.h
tests/: CMakeLists.txt  test_boxselect.cpp  test_editmesh.cpp  test_main.cpp  test_sceneformat.cpp  test_snap.cpp
tools/: capture-editor.ps1
